cmake_minimum_required(VERSION 3.12)
project(taller)

set(CMAKE_CXX_STANDARD 14)

add_executable(VanyaAndLanterns VanyaAndLanterns.cpp)
add_executable(KefaAndCompany KefaAndCompany.cpp)
add_executable(InterestingDrink InterestingDrink.cpp)
add_executable(DreamoonAndWiFi DreamoonAndWiFi.cpp)
add_executable(PrimeRingProblem PrimeRingProblem.cpp)
add_executable(HanoiTowerTroublesAgain HanoiTowerTroublesAgain.cpp)